<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.temoteam.simsinfinity.ui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="ru.temoteam.simsinfinity.ui.ui.goals.GoalsFragment"
        android:label="@string/goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="ru.temoteam.simsinfinity.ui.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
</navigation>